--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -6,3 +6,4 @@ $label-text-color: #f5f5f5;
 $background-color: #f5f5f5;
 $element-background-color: #ffffff;
 $divider-color: #1c2c65;
+$grey-divider-color: #eff0f1;
