--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -6,6 +6,7 @@
   padding: 0 7.5rem;
   box-shadow: 0 3px 3px -2px rgb(211, 211, 211);
   margin: 0 auto;
+  background-color: white;
 
   &__container {
     width: 100%;
