added chatbot functionality

--- a/src/Components/RecentActivity.scss
+++ b/src/Components/RecentActivity.scss
@@ -23,7 +23,7 @@ body {
     }
 
     &__right {
-        width: 394px;
+        width: 500px;
         gap: 1rem;
         display: flex;
         flex-direction: column;
@@ -119,6 +119,7 @@ body {
         height: 100%;
         padding: 1rem;
         padding-top: 2rem;
+        overflow-y: auto;
     }
 
     &__img {
@@ -171,6 +172,7 @@ body {
     &__req {
         display: flex;
         justify-content: flex-end;
+        margin: 1rem 0;
     }
 
     &__req-shape {
