--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -6,6 +6,7 @@
   padding: 0 7.5rem;
   box-shadow: 0 3px 3px -2px rgb(211, 211, 211);
   margin: 0 auto;
+  background-color: white;
 
   &__container {
     width: 100%;
@@ -81,9 +82,17 @@
     margin: 0;
   }
   &__container {
-    padding: 6px 3rem 0 8px;
+    margin-top: 1rem;
+    width: 170px;
+    padding-right: 40px;
     margin-bottom: 10px;
-    border: 1px solid lightgray;
-    background-color: rgb(248, 248, 248);
+    border: 2px solid lightgray;
+    background-color: rgb(235, 235, 235);
+    display: flex;
+    align-items: center;
+    
+  }
+  &__text {
+    font-size: 18px;
   }
 }
