added side buttons and figures

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -7,3 +7,4 @@ $background-color: #f5f5f5;
 $element-background-color: #ffffff;
 $divider-color: #1c2c65;
 $grey-divider-color: #eff0f1;
+$green-color: #3b8569;
