--- a/src/Components/PaymentInfo.scss
+++ b/src/Components/PaymentInfo.scss
@@ -5,6 +5,7 @@
   background-color: $background-color;
   display: flex;
   justify-content: center;
+  padding-top: 1rem;
 
   &__box {
     background-color: $element-background-color;
@@ -24,6 +25,7 @@
 
   &__amount {
     text-align: center;
+    padding-top: 1rem;
   }
 
   &__textbox {
@@ -42,18 +44,40 @@
     font-size: 1.3rem;
     border-radius: 5px;
     cursor: pointer;
+    &:hover {
+      background-color: #232940;
+      box-shadow: 30%;
+    }
+  }
+
+  &__number--large {
+    font-size: 2.5rem;
+    padding: 1rem;
+  }
+
+  &__due {
+    font-size: 3rem;
+    font-weight: 700;
+    text-align: center;
+    padding-top: 4rem;
+  }
+
+  &__number {
+    padding-top: 1rem;
+    font-weight: 400;
   }
 
   &__button-container {
     text-align: center;
-    margin-top: 10rem;
+    margin-top: 3rem;
   }
 
   &__bold {
     border-bottom: 1px solid $grey-divider-color;
     width: 100%;
     text-align: center;
-    padding-bottom: 5rem;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
   }
 
   &__large {
@@ -63,6 +87,7 @@
     font-size: 3rem;
     font-weight: 500;
     margin-top: 0rem;
+    padding-top: 1rem;
   }
 
   &__regular {
@@ -72,5 +97,49 @@
     font-weight: 400;
     padding-bottom: 2rem;
     margin-bottom: 4rem;
+    padding-top: 1rem;
   }
+
+  &__button--chat {
+    border-radius: 49%;
+    padding: 1rem;
+    border: none;
+    width: 4rem;
+    background-color: #2f6dc8;
+    bottom: 11rem;
+    right: 0rem;
+    position: fixed;
+    cursor: pointer;
+    &:hover {
+      background-color: #232940;
+      box-shadow: 30%;
+    }
+  }
+
+  &__button--feedback {
+    padding: 0.6rem;
+    background-color: $green-color;
+    border-radius: 5px;
+    border: 0;
+    &:hover {
+      background-color: #295c49;
+      box-shadow: 30%;
+    }
+
+    color: $element-background-color;
+    position: fixed;
+    bottom: 18rem;
+    right: -2.2rem;
+    cursor: pointer;
+    vertical-align: top;
+    transform: rotate(90deg);
+    -ms-transform: rotate(180deg); /* IE 9 */
+    -moz-transform: rotate(180deg); /* Firefox */
+    -webkit-transform: rotate(270deg); /* Safari and Chrome */
+    -o-transform: rotate(180deg); /* Opera */
+  }
+}
+
+.material-symbols-outlined {
+  color: $element-background-color;
 }
