add add window, fix App.js layout

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,13 @@
   box-sizing: border-box;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  max-width: 1300px;
+  margin: 0 auto;
+}
+
 // body styling
 
 .App {
