--- a/src/Components/PaymentInfo.scss
+++ b/src/Components/PaymentInfo.scss
@@ -5,6 +5,8 @@
   background-color: $background-color;
   display: flex;
   justify-content: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 
   &__box {
     background-color: $element-background-color;
