--- a/src/Components/RecentActivity.scss
+++ b/src/Components/RecentActivity.scss
@@ -132,6 +132,8 @@ body {
         width: 2rem;
         height: 2rem;
         border-radius: 50%;
+        background-size: cover;
+        background-position: center;
     }
 
     &__res {
