--- a/src/Components/RecentActivity.scss
+++ b/src/Components/RecentActivity.scss
@@ -127,7 +127,7 @@ body {
   top: 0;
   right: 0;
   left: 0;
-  display: none;
+//   display: none;
 
   &__header {
     background-color: #2f6dc8;
